--- a/info.yaml
+++ b/info.yaml
@@ -1,7 +1,7 @@
 # Tiny Tapeout project information
 project:
   title:        "D flip flop"      # Project title
-  author:       "Islam"      # Your name
+  author:       "Ajah"      # Your name
   discord:      ""      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
   description:  "Behavioral description of d flip flop"      # One line description of what your project does
   language:     "Verilog" # other examples include SystemVerilog, Amaranth, VHDL, etc
@@ -17,7 +17,7 @@ project:
   # Source files must be in ./src and you must list each source file separately, one per line.
   # Don't forget to also update `PROJECT_SOURCES` in test/Makefile.
   source_files:
-    - "tt_um_islam_ihfaz_d_flip_flop.v"
+    - "tt_um_ajah_stott_holmes_d_flip_flop.v"
 
 # The pinout of your project. Leave unused pins blank. DO NOT delete or add any pins.
 # This section is for the datasheet/website. Use descriptive names (e.g., RX, TX, MOSI, SCL, SEG_A, etc.).
